manifests/backup-manager/k8s-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-adapter
  namespace: backup-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-adapter
  template:
    metadata:
      labels:
        app: k8s-adapter
    spec:
      serviceAccountName: k8s-adapter
      containers:
        - name: k8s-adapter
          image: ghcr.io/wuguishifu/backup-manager/k8s-adapter:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-adapter
  namespace: backup-manager
spec:
  selector:
    app: k8s-adapter
  ports:
    - port: 3001
      targetPort: 3001
