manifests/backup-manager/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: backup-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/wuguishifu/backup-manager/web:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: backup-manager-config
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: backup-manager
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: backup-manager
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - backups.wuguishifu.dev
      secretName: backup-manager-tls
  rules:
    - host: backups.wuguishifu.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
